Fixed focus lock bug

--- a/spring/src/styles.css
+++ b/spring/src/styles.css
@@ -1,5 +1,5 @@
 .CenterModal__overlay {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
 
@@ -11,7 +11,7 @@
 }
 
 .BottomModal__overlay {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
 
