--- a/examples/typescript/src/index/App/App.css
+++ b/examples/typescript/src/index/App/App.css
@@ -67,3 +67,15 @@ p {
   box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.15);
   background-color: #333;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
