--- a/examples/typescript/src/index/index.css
+++ b/examples/typescript/src/index/index.css
@@ -1,16 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-  sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 18px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-  monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 .Form {
@@ -40,8 +38,8 @@ code {
   padding: 0.4rem 0.5rem;
 }
 
-.Form input[type="checkbox"],
-.Form input[type="radio"] {
+.Form input[type='checkbox'],
+.Form input[type='radio'] {
   margin-right: 0.5rem;
 }
 
@@ -68,8 +66,13 @@ code {
 }
 
 .error {
-  color: #950000;
-  background-color: rgba(215, 0, 0, 0.24);
+  color: hsl(0, 100%, 20%);
+  background-color: hsla(0, 100%, 42%, 0.2);
   border-radius: 0.2rem;
   padding: 0.2rem 0.5rem;
+}
+
+.dark-mode .error {
+  color: hsl(0, 100%, 15%);
+  background-color: hsla(0, 100%, 85%);
 }
